--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -3,5 +3,6 @@
     "LogLevel": {
       "Default": "Warning"
     }
-  }
+  },
+  "DbConnectionString": "Server=IS-WKS107;Database=Epsilon;Trusted_Connection=True;"
 }
