add seeding Categories

--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -7,7 +7,7 @@
   "DbConnectionString": "Server=IS-WKS107;Database=Epsilon;Trusted_Connection=True;",
   "ConnectionStrings": {
     // Dev Db
-    "DefaultConnection": "Data Source=showandsave.database.windows.net;Initial Catalog=ShowAndSavePortal_DB_Dev;Integrated Security=False;User ID=showandsavedbadmin;Password=f4gVd{_mK*xn;MultipleActiveResultSets=true",
+    "DefaultConnection": "Server=IS-WKS107;Database=Epsilon;Trusted_Connection=True;",
     //"DefaultConnection": "Data Source=showandsave.database.windows.net;Initial Catalog=ShowAndSavePortal_DB_UAT;Integrated Security=False;User ID=showandsavedbadmin;Password=f4gVd{_mK*xn;MultipleActiveResultSets=true",
     // Nar Local Db
     //"DefaultConnection": "Data Source=(localdb)\\mssqllocaldb;Initial Catalog=showsave_users;Integrated Security=False;User ID=sa;Password=sas;MultipleActiveResultSets=true"
