manager added products

--- a/Client.Service/Client.Service.csproj
+++ b/Client.Service/Client.Service.csproj
@@ -5,11 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Products\Managers\ProductsManager.Product.cs" />
+    <PackageReference Include="AutoMapper" Version="7.0.1" />
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="Products\Managers\ProductsManager.Product.cs" />
+    <ProjectReference Include="..\Data\Data.csproj" />
   </ItemGroup>
 
 </Project>
