add dinamic thumbnails

--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -5,6 +5,7 @@
     }
   },
   "DbConnectionString": "Server=IS-WKS107;Database=Epsilon;Trusted_Connection=True;",
+  "BasePath": "D:\\learning\\ReactLearn\\Web",
   "ConnectionStrings": {
     // Dev Db
     "DefaultConnection": "Server=IS-WKS107;Database=Epsilon;Trusted_Connection=True;",
